syntax = "proto3";

package io.aurigraph.v11.proto;

import "common.proto";

// ========================================================================
// Sprint 15: Webhook Service gRPC - Story 8 Migration
// ========================================================================
// Provides webhook registration, delivery & verification via gRPC
// - 6 RPC methods for register, event streaming, delivery
// - Real-time event delivery with retry logic
// - HMAC-SHA256 signature verification
// - Performance: >50k events/sec throughput
// ========================================================================

service WebhookGrpcService {
    rpc registerWebhook(WebhookRegistration) returns (WebhookReceipt);
    rpc unregisterWebhook(WebhookIdRequest) returns (UnregisterResponse);
    rpc getWebhookStatus(WebhookIdRequest) returns (WebhookStatus_Message);
    rpc streamWebhookEvents(WebhookSubscription) returns (stream WebhookEvent_Message);
    rpc deliverWebhookEvent(WebhookEventDelivery) returns (DeliveryReceipt);
    rpc checkHealth(Empty) returns (HealthStatus);
}

message WebhookRegistration {
    string webhook_id = 1;
    string url = 2;
    repeated string event_types = 3;
    string secret = 4;
    map<string, string> headers = 5;
    int32 retry_count = 6;
    int32 timeout_seconds = 7;
}

message WebhookReceipt {
    string webhook_id = 1;
    bool registered = 2;
    string message = 3;
    string secret = 4;
    string timestamp = 5;
}

message WebhookIdRequest {
    string webhook_id = 1;
}

message UnregisterResponse {
    string webhook_id = 1;
    bool unregistered = 2;
    string message = 3;
}

message WebhookStatus_Message {
    string webhook_id = 1;
    string url = 2;
    bool active = 3;
    int32 successful_deliveries = 4;
    int32 failed_deliveries = 5;
    string last_delivery_at = 6;
    string last_error = 7;
}

message WebhookSubscription {
    string subscription_id = 1;
    repeated string event_types = 2;
}

message WebhookEvent_Message {
    string event_id = 1;
    string event_type = 2;
    bytes payload = 3;
    string timestamp = 4;
    string source = 5;
}

message WebhookEventDelivery {
    string webhook_id = 1;
    WebhookEvent_Message event = 2;
    string signature = 3;
    int32 attempt = 4;
}

message DeliveryReceipt {
    string webhook_id = 1;
    string event_id = 2;
    bool delivered = 3;
    int32 http_status = 4;
    string response_body = 5;
    string timestamp = 6;
}
