syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.hms.grpc";
option java_outer_classname = "HMSServiceProto";

package hms;

// HMS gRPC Service for Healthcare Asset Tokenization
service HMSService {
  // Tokenize a healthcare asset (medical record, prescription, diagnostic report)
  rpc TokenizeAsset(AssetRequest) returns (TokenResponse);

  // Verify asset with multi-verifier consensus
  rpc VerifyAsset(VerificationRequest) returns (VerificationResponse);

  // Get current asset status
  rpc GetAssetStatus(AssetQuery) returns (AssetStatus);

  // Transfer asset ownership
  rpc TransferAsset(TransferRequest) returns (TransferResponse);

  // Batch tokenization for high throughput
  rpc BatchTokenizeAssets(BatchAssetRequest) returns (BatchTokenResponse);

  // Register as verifier in the network
  rpc RegisterVerifier(VerifierRegistration) returns (VerifierRegistrationResponse);

  // Get verification consensus status
  rpc GetConsensusStatus(ConsensusQuery) returns (ConsensusStatus);
}

// Asset Request for tokenization
message AssetRequest {
  string asset_id = 1;
  AssetType asset_type = 2;
  string patient_id = 3;
  string provider_id = 4;
  bytes asset_data = 5;  // Encrypted healthcare data
  map<string, string> metadata = 6;
  ComplianceInfo compliance = 7;
  int64 timestamp = 8;
  string requester_signature = 9;
}

// Asset Types
enum AssetType {
  UNKNOWN = 0;
  MEDICAL_RECORD = 1;
  PRESCRIPTION = 2;
  DIAGNOSTIC_REPORT = 3;
  LAB_RESULT = 4;
  IMAGING_SCAN = 5;
  INSURANCE_CLAIM = 6;
  TREATMENT_PLAN = 7;
}

// Compliance Information
message ComplianceInfo {
  bool hipaa_compliant = 1;
  bool gdpr_compliant = 2;
  repeated string compliance_flags = 3;
  string consent_signature = 4;
  int64 consent_timestamp = 5;
  string jurisdiction = 6;
}

// Token Response
message TokenResponse {
  bool success = 1;
  string token_id = 2;
  string asset_id = 3;
  string transaction_hash = 4;
  int64 block_number = 5;
  string error_message = 6;
  TokenMetadata token_metadata = 7;
  int64 timestamp = 8;
}

// Token Metadata
message TokenMetadata {
  string owner = 1;
  string asset_type = 2;
  int64 creation_timestamp = 3;
  int64 expiry_timestamp = 4;
  repeated string access_permissions = 5;
  string encryption_key_id = 6;
}

// Verification Request
message VerificationRequest {
  string asset_id = 1;
  string token_id = 2;
  string verifier_id = 3;
  VerificationTier tier = 4;
  bytes verification_proof = 5;
  map<string, string> verification_metadata = 6;
  int64 timestamp = 7;
}

// Verification Tiers
enum VerificationTier {
  TIER_UNKNOWN = 0;
  TIER_1 = 1;  // <$100K - 1 verifier
  TIER_2 = 2;  // $100K-$1M - 2 verifiers
  TIER_3 = 3;  // $1M-$10M - 3 verifiers
  TIER_4 = 4;  // >$10M - 5 verifiers
}

// Verification Response
message VerificationResponse {
  bool success = 1;
  string verification_id = 2;
  VerificationStatus status = 3;
  int32 approvals_required = 4;
  int32 approvals_received = 5;
  repeated VerifierVote verifier_votes = 6;
  bool consensus_reached = 7;
  string error_message = 8;
  int64 timestamp = 9;
}

// Verification Status
enum VerificationStatus {
  PENDING = 0;
  APPROVED = 1;
  REJECTED = 2;
  CONSENSUS_REACHED = 3;
  EXPIRED = 4;
  FRAUD_DETECTED = 5;
}

// Verifier Vote
message VerifierVote {
  string verifier_id = 1;
  bool approved = 2;
  string reason = 3;
  int64 vote_timestamp = 4;
  string signature = 5;
}

// Asset Query
message AssetQuery {
  string asset_id = 1;
  string token_id = 2;
  bool include_history = 3;
  bool include_verifications = 4;
}

// Asset Status
message AssetStatus {
  string asset_id = 1;
  string token_id = 2;
  string current_owner = 3;
  AssetState state = 4;
  VerificationStatus verification_status = 5;
  repeated TransferHistory transfer_history = 6;
  repeated VerificationHistory verification_history = 7;
  ComplianceStatus compliance_status = 8;
  int64 last_updated = 9;
}

// Asset State
enum AssetState {
  ASSET_CREATED = 0;
  ASSET_ACTIVE = 1;
  ASSET_TRANSFERRED = 2;
  ASSET_REVOKED = 3;
  ASSET_EXPIRED = 4;
}

// Transfer History
message TransferHistory {
  string from_owner = 1;
  string to_owner = 2;
  int64 transfer_timestamp = 3;
  string transaction_hash = 4;
  string reason = 5;
}

// Verification History
message VerificationHistory {
  string verification_id = 1;
  string verifier_id = 2;
  VerificationStatus status = 3;
  int64 verification_timestamp = 4;
  string notes = 5;
}

// Compliance Status
message ComplianceStatus {
  bool hipaa_compliant = 1;
  bool gdpr_compliant = 2;
  repeated string active_flags = 3;
  int64 last_audit_timestamp = 4;
  repeated ComplianceViolation violations = 5;
}

// Compliance Violation
message ComplianceViolation {
  string violation_type = 1;
  string description = 2;
  int64 detected_timestamp = 3;
  string severity = 4;
  bool resolved = 5;
}

// Transfer Request
message TransferRequest {
  string asset_id = 1;
  string token_id = 2;
  string from_owner = 3;
  string to_owner = 4;
  string authorization_signature = 5;
  map<string, string> transfer_metadata = 6;
  int64 timestamp = 7;
}

// Transfer Response
message TransferResponse {
  bool success = 1;
  string transfer_id = 2;
  string transaction_hash = 3;
  int64 block_number = 4;
  string new_owner = 5;
  string error_message = 6;
  int64 timestamp = 7;
}

// Batch Asset Request
message BatchAssetRequest {
  repeated AssetRequest assets = 1;
  bool parallel_processing = 2;
  int32 batch_size = 3;
}

// Batch Token Response
message BatchTokenResponse {
  bool success = 1;
  int32 total_requested = 2;
  int32 total_succeeded = 3;
  int32 total_failed = 4;
  repeated TokenResponse responses = 5;
  repeated string error_messages = 6;
  int64 processing_time_ms = 7;
}

// Verifier Registration
message VerifierRegistration {
  string verifier_id = 1;
  string verifier_name = 2;
  string organization = 3;
  repeated string certifications = 4;
  repeated string specializations = 5;
  string public_key = 6;
  map<string, string> contact_info = 7;
}

// Verifier Registration Response
message VerifierRegistrationResponse {
  bool success = 1;
  string verifier_id = 2;
  VerifierStatus status = 3;
  string error_message = 4;
  int64 registration_timestamp = 5;
}

// Verifier Status
enum VerifierStatus {
  VERIFIER_INACTIVE = 0;
  VERIFIER_ACTIVE = 1;
  VERIFIER_SUSPENDED = 2;
  VERIFIER_REVOKED = 3;
  VERIFIER_EXPIRED = 4;
}

// Consensus Query
message ConsensusQuery {
  string asset_id = 1;
  string verification_id = 2;
  bool include_votes = 3;
}

// Consensus Status
message ConsensusStatus {
  string verification_id = 1;
  int32 total_verifiers = 2;
  int32 votes_received = 3;
  int32 votes_required = 4;
  double consensus_percentage = 5;
  bool consensus_reached = 6;
  VerificationStatus final_status = 7;
  repeated VerifierVote votes = 8;
  int64 consensus_timestamp = 9;
}
