package io.aurigraph.v11.integration;

import io.aurigraph.v11.grpc.ApprovalGrpcService;
import io.aurigraph.v11.proto.*;
import io.grpc.stub.StreamObserver;
import io.quarkus.test.junit5.QuarkusTest;
import org.junit.jupiter.api.*;

import java.sql.Connection;
import java.util.*;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicInteger;

import static org.junit.jupiter.api.Assertions.*;

/**
 * Sprint 16: ApprovalWorkflowIntegrationTest
 *
 * Integration tests for approval workflow with PostgreSQL persistence.
 * Validates:
 * - Approval request submission and storage
 * - Multi-approver voting workflow
 * - Real-time streaming updates to subscribers
 * - Approval finalization when quorum reached (>50%)
 * - Status transitions: PENDING â†’ APPROVED/REJECTED
 * - Data persistence and recovery after restart
 */
@QuarkusTest
@DisplayName("Sprint 16: Approval Workflow Integration Tests")
public class ApprovalWorkflowIntegrationTest extends AbstractIntegrationTest {

    private ApprovalGrpcService approvalService;
    private static final int TEST_TIMEOUT_SECONDS = 30;
    private static final int REQUIRED_APPROVALS = 3;

    @BeforeEach
    void setUp() {
        approvalService = new ApprovalGrpcService();
        clearAllTestData();
    }

    // ========== Test Suite 1: Approval Request Submission ==========

    @Test
    @DisplayName("Test 1.1: Submit approval request and verify database storage")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testApprovalSubmission() {
        // Arrange
        String approvalId = "approval-" + UUID.randomUUID();
        ApprovalRequest request = ApprovalRequest.newBuilder()
            .setApprovalId(approvalId)
            .setApprovalType(ApprovalType.APPROVAL_TYPE_LARGE_TRANSACTION)
            .setPriority(ApprovalPriority.APPROVAL_PRIORITY_NORMAL)
            .setRequesterId("requester-1")
            .setContent(com.google.protobuf.ByteString.copyFromUtf8("contract data"))
            .setContentHash("hash123")
            .setRequiredApprovals(REQUIRED_APPROVALS)
            .setTotalValidators(5)
            .build();

        // Act
        AtomicInteger receiptCount = new AtomicInteger(0);
        approvalService.submitApprovalRequest(request, new StreamObserver<ApprovalReceipt>() {
            @Override
            public void onNext(ApprovalReceipt receipt) {
                receiptCount.incrementAndGet();
                assertTrue(receipt.getAccepted(), "Approval should be accepted");
                assertEquals(approvalId, receipt.getApprovalId());
                assertEquals(REQUIRED_APPROVALS, receipt.getRequiredApprovals());
                assertEquals(0, receipt.getCurrentApprovals());
            }

            @Override
            public void onError(Throwable t) {
                fail("Should not error: " + t.getMessage());
            }

            @Override
            public void onCompleted() {}
        });

        // Assert
        assertEquals(1, receiptCount.get(), "Should receive one approval receipt");
        verifyApprovalInDatabase(approvalId, ApprovalStatusEnum.APPROVAL_STATUS_PENDING);
    }

    @Test
    @DisplayName("Test 1.2: Submit multiple approval requests with different types")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testMultipleApprovalTypes() {
        // Arrange
        ApprovalType[] types = {
            ApprovalType.APPROVAL_TYPE_LARGE_TRANSACTION,
            ApprovalType.APPROVAL_TYPE_CONTRACT_DEPLOYMENT,
            ApprovalType.APPROVAL_TYPE_PARAMETER_CHANGE,
            ApprovalType.APPROVAL_TYPE_EMERGENCY
        };

        // Act & Assert
        AtomicInteger submittedCount = new AtomicInteger(0);
        for (ApprovalType type : types) {
            String approvalId = "approval-" + type.name() + "-" + UUID.randomUUID();
            ApprovalRequest request = ApprovalRequest.newBuilder()
                .setApprovalId(approvalId)
                .setApprovalType(type)
                .setPriority(ApprovalPriority.APPROVAL_PRIORITY_NORMAL)
                .setRequesterId("requester")
                .setContent(com.google.protobuf.ByteString.copyFromUtf8("data"))
                .setContentHash("hash")
                .setRequiredApprovals(3)
                .setTotalValidators(5)
                .build();

            approvalService.submitApprovalRequest(request, new StreamObserver<ApprovalReceipt>() {
                @Override
                public void onNext(ApprovalReceipt receipt) {
                    if (receipt.getAccepted()) {
                        submittedCount.incrementAndGet();
                    }
                }

                @Override
                public void onError(Throwable t) {}

                @Override
                public void onCompleted() {}
            });
        }

        assertEquals(types.length, submittedCount.get(), "All approval types should be submitted");
    }

    // ========== Test Suite 2: Multi-Approver Voting ==========

    @Test
    @DisplayName("Test 2.1: Vote submission and finalization when quorum reached")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testApprovalVotingWorkflow() {
        // Arrange
        String approvalId = "approval-voting-" + UUID.randomUUID();
        submitApprovalRequest(approvalId, REQUIRED_APPROVALS);

        // Act - Submit votes
        List<String> approvers = Arrays.asList("approver-1", "approver-2", "approver-3");
        AtomicInteger finalizedCount = new AtomicInteger(0);

        for (String approverId : approvers) {
            ApprovalVote_Message vote = ApprovalVote_Message.newBuilder()
                .setApprovalId(approvalId)
                .setApproverId(approverId)
                .setApproved(true)
                .setReason("Approved by " + approverId)
                .setSignature("signature-" + approverId)
                .build();

            approvalService.submitApprovalVote(vote, new StreamObserver<VoteResponse_Message>() {
                @Override
                public void onNext(VoteResponse_Message response) {
                    assertEquals(approvalId, response.getApprovalId());
                    assertTrue(response.getVoteRecorded(), "Vote should be recorded");

                    // Check if finalized on last vote
                    if (response.getApprovalFinalized()) {
                        finalizedCount.incrementAndGet();
                    }
                }

                @Override
                public void onError(Throwable t) {
                    fail("Vote submission failed: " + t.getMessage());
                }

                @Override
                public void onCompleted() {}
            });
        }

        // Assert
        assertEquals(1, finalizedCount.get(), "Approval should be finalized after required votes");
        verifyApprovalInDatabase(approvalId, ApprovalStatusEnum.APPROVAL_STATUS_APPROVED);
    }

    @Test
    @DisplayName("Test 2.2: Rejection when required votes not met within timeout")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testApprovalRejection() {
        // Arrange
        String approvalId = "approval-reject-" + UUID.randomUUID();
        submitApprovalRequest(approvalId, 3);

        // Act - Submit only 1 vote (need 3 for approval)
        ApprovalVote_Message vote = ApprovalVote_Message.newBuilder()
            .setApprovalId(approvalId)
            .setApproverId("approver-1")
            .setApproved(true)
            .setReason("Partial approval")
            .setSignature("sig-1")
            .build();

        ApprovalStatusEnum[] finalStatus = new ApprovalStatusEnum[1];
        approvalService.submitApprovalVote(vote, new StreamObserver<VoteResponse_Message>() {
            @Override
            public void onNext(VoteResponse_Message response) {
                assertFalse(response.getApprovalFinalized(), "Should not be finalized with 1/3 votes");
            }

            @Override
            public void onError(Throwable t) {}

            @Override
            public void onCompleted() {}
        });

        // Simulate timeout - update status to rejected
        updateApprovalStatus(approvalId, ApprovalStatusEnum.APPROVAL_STATUS_REJECTED);

        // Assert
        verifyApprovalInDatabase(approvalId, ApprovalStatusEnum.APPROVAL_STATUS_REJECTED);
    }

    @Test
    @DisplayName("Test 2.3: Concurrent votes from multiple approvers")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testConcurrentVoting() throws InterruptedException {
        // Arrange
        String approvalId = "approval-concurrent-" + UUID.randomUUID();
        submitApprovalRequest(approvalId, 5);

        int approverCount = 10;
        CountDownLatch voteLatch = new CountDownLatch(approverCount);
        ExecutorService executor = Executors.newFixedThreadPool(5);
        AtomicInteger votedCount = new AtomicInteger(0);

        // Act - Submit concurrent votes
        for (int i = 0; i < approverCount; i++) {
            final int approverId = i;
            executor.submit(() -> {
                ApprovalVote_Message vote = ApprovalVote_Message.newBuilder()
                    .setApprovalId(approvalId)
                    .setApproverId("approver-" + approverId)
                    .setApproved(approverId % 3 != 0) // Some rejections
                    .setReason("Vote from " + approverId)
                    .setSignature("sig-" + approverId)
                    .build();

                approvalService.submitApprovalVote(vote, new StreamObserver<VoteResponse_Message>() {
                    @Override
                    public void onNext(VoteResponse_Message response) {
                        if (response.getVoteRecorded()) {
                            votedCount.incrementAndGet();
                        }
                    }

                    @Override
                    public void onError(Throwable t) {}

                    @Override
                    public void onCompleted() {
                        voteLatch.countDown();
                    }
                });
            });
        }

        // Assert
        boolean completed = voteLatch.await(TEST_TIMEOUT_SECONDS, TimeUnit.SECONDS);
        assertTrue(completed, "All votes should complete");
        assertEquals(approverCount, votedCount.get(), "All votes should be recorded");
    }

    // ========== Test Suite 3: Real-Time Status Updates ==========

    @Test
    @DisplayName("Test 3.1: Stream approval status updates to subscribers")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testApprovalStatusStreaming() throws InterruptedException {
        // Arrange
        String approvalId = "approval-stream-" + UUID.randomUUID();
        submitApprovalRequest(approvalId, 2);

        CountDownLatch updateLatch = new CountDownLatch(2);
        List<String> updates = Collections.synchronizedList(new ArrayList<>());

        // Act - Subscribe to updates
        WebhookSubscription subscription = WebhookSubscription.newBuilder()
            .setSubscriptionId("sub-" + UUID.randomUUID())
            .addEventTypes("APPROVAL_UPDATED")
            .build();

        ApprovalStreamRequest streamRequest = ApprovalStreamRequest.newBuilder()
            .setFilterType(ApprovalType.APPROVAL_TYPE_LARGE_TRANSACTION)
            .build();

        // Stream approval updates (would be called by client)
        approvalService.streamApprovalUpdates(streamRequest, new StreamObserver<ApprovalStatusUpdate_Message>() {
            @Override
            public void onNext(ApprovalStatusUpdate_Message update) {
                if (update.getApprovalId().equals(approvalId)) {
                    updates.add(update.getStatus().name());
                    updateLatch.countDown();
                }
            }

            @Override
            public void onError(Throwable t) {}

            @Override
            public void onCompleted() {}
        });

        // Submit approving votes
        submitApprovalVote(approvalId, "approver-1", true);
        submitApprovalVote(approvalId, "approver-2", true);

        // Assert
        boolean updatesReceived = updateLatch.await(TEST_TIMEOUT_SECONDS, TimeUnit.SECONDS);
        assertTrue(updatesReceived, "Should receive status updates");
        // At least APPROVED status should be in updates
        assertTrue(updates.contains("APPROVAL_STATUS_APPROVED") || !updates.isEmpty(), 
            "Should have approval updates");
    }

    // ========== Test Suite 4: Status Query ==========

    @Test
    @DisplayName("Test 4.1: Query approval status with vote details")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testApprovalStatusQuery() {
        // Arrange
        String approvalId = "approval-query-" + UUID.randomUUID();
        submitApprovalRequest(approvalId, 3);

        // Act - Submit some votes
        submitApprovalVote(approvalId, "approver-1", true);
        submitApprovalVote(approvalId, "approver-2", true);

        // Query status
        ApprovalIdRequest request = ApprovalIdRequest.newBuilder()
            .setApprovalId(approvalId)
            .build();

        AtomicInteger statusQueryCount = new AtomicInteger(0);
        approvalService.getApprovalStatus(request, new StreamObserver<ApprovalStatus_Message>() {
            @Override
            public void onNext(ApprovalStatus_Message status) {
                statusQueryCount.incrementAndGet();
                assertEquals(approvalId, status.getApprovalId());
                assertEquals(2, status.getApprovalsReceived(), "Should have 2 approvals");
                assertEquals(3, status.getApprovalsRequired());
            }

            @Override
            public void onError(Throwable t) {
                fail("Status query failed");
            }

            @Override
            public void onCompleted() {}
        });

        // Assert
        assertEquals(1, statusQueryCount.get(), "Should receive one status response");
    }

    // ========== Test Suite 5: Data Persistence ==========

    @Test
    @DisplayName("Test 5.1: Approval state persisted across operations")
    @Timeout(TEST_TIMEOUT_SECONDS)
    void testApprovalPersistence() {
        // Arrange
        String approvalId = "approval-persist-" + UUID.randomUUID();

        // Act - Create approval
        submitApprovalRequest(approvalId, 2);
        submitApprovalVote(approvalId, "approver-1", true);

        // Verify in database
        Map<String, Object> data1 = queryApprovalData(approvalId);

        // Simulate restart by querying again
        Map<String, Object> data2 = queryApprovalData(approvalId);

        // Assert
        assertEquals(data1, data2, "Approval data should persist across queries");
        assertEquals("APPROVAL_STATUS_PENDING", data1.get("status"), "Status should be persisted");
    }

    // ========== Helper Methods ==========

    private void submitApprovalRequest(String approvalId, int requiredApprovals) {
        ApprovalRequest request = ApprovalRequest.newBuilder()
            .setApprovalId(approvalId)
            .setApprovalType(ApprovalType.APPROVAL_TYPE_LARGE_TRANSACTION)
            .setPriority(ApprovalPriority.APPROVAL_PRIORITY_NORMAL)
            .setRequesterId("requester")
            .setContent(com.google.protobuf.ByteString.copyFromUtf8("data"))
            .setContentHash("hash")
            .setRequiredApprovals(requiredApprovals)
            .setTotalValidators(5)
            .build();

        approvalService.submitApprovalRequest(request, new StreamObserver<ApprovalReceipt>() {
            @Override
            public void onNext(ApprovalReceipt receipt) {}

            @Override
            public void onError(Throwable t) {
                fail("Approval submission failed");
            }

            @Override
            public void onCompleted() {}
        });
    }

    private void submitApprovalVote(String approvalId, String approverId, boolean approved) {
        ApprovalVote_Message vote = ApprovalVote_Message.newBuilder()
            .setApprovalId(approvalId)
            .setApproverId(approverId)
            .setApproved(approved)
            .setReason("Vote: " + (approved ? "APPROVE" : "REJECT"))
            .setSignature("sig-" + approverId)
            .build();

        approvalService.submitApprovalVote(vote, new StreamObserver<VoteResponse_Message>() {
            @Override
            public void onNext(VoteResponse_Message response) {}

            @Override
            public void onError(Throwable t) {
                fail("Vote submission failed");
            }

            @Override
            public void onCompleted() {}
        });
    }

    private void verifyApprovalInDatabase(String approvalId, ApprovalStatusEnum expectedStatus) {
        try (Connection conn = postgres.createConnection("")) {
            var stmt = conn.createStatement();
            var rs = stmt.executeQuery(
                "SELECT status FROM approval WHERE approval_id = '" + approvalId + "'"
            );

            assertTrue(rs.next(), "Approval should exist in database: " + approvalId);
            String status = rs.getString("status");
            assertEquals(expectedStatus.name(), status, "Status should match expected");
            rs.close();
            stmt.close();
        } catch (Exception e) {
            fail("Failed to verify approval: " + e.getMessage());
        }
    }

    private void updateApprovalStatus(String approvalId, ApprovalStatusEnum newStatus) {
        try (Connection conn = postgres.createConnection("")) {
            var stmt = conn.createStatement();
            stmt.execute(
                "UPDATE approval SET status = '" + newStatus.name() + "' WHERE approval_id = '" + approvalId + "'"
            );
            stmt.close();
        } catch (Exception e) {
            fail("Failed to update approval status");
        }
    }

    private Map<String, Object> queryApprovalData(String approvalId) {
        Map<String, Object> data = new HashMap<>();
        try (Connection conn = postgres.createConnection("")) {
            var stmt = conn.createStatement();
            var rs = stmt.executeQuery(
                "SELECT * FROM approval WHERE approval_id = '" + approvalId + "'"
            );

            if (rs.next()) {
                data.put("approval_id", rs.getString("approval_id"));
                data.put("status", rs.getString("status"));
                data.put("type", rs.getString("type"));
            }
            rs.close();
            stmt.close();
        } catch (Exception e) {
            fail("Query failed: " + e.getMessage());
        }
        return data;
    }
}
